# talia

./: .gitignore  CHECKLIST_TALIA.md  NGINX_TALIA_CONF.md  PLAN_TALIA.md  Que _llevo _realizado.md  README.md  comandos_configuracion_inicial.md  copia_env_sin_claves.md
backend/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: health.py  panel.py
backend/app/assistants/: manager.py  registry.py
backend/app/channels/voice/: deps.py  router.py  schemas.py  service.py
backend/app/channels/webchat/: __init__.py  deps.py  router.py  schemas.py  service.py
backend/app/channels/whatsapp/: deps.py  router.py  schemas.py  service.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/data/: __init__.py
backend/app/models/: conversation.py
backend/app/public/panel/: agenda.html  configuracion.html  embudo.html  inbox.html  leads.html  panel.html  visitas.html
backend/app/repositories/: leads.py
backend/app/services/: geolocation.py  lead_pipeline.py  leads_geo.py  openai.py  storage.py  twilio.py  user_agent.py
backend/scripts/: backup_db.py  run_api.sh  run_poetry.sh
backend/tests/: conftest.py  test_health.py  test_panel_embudo.py  test_panel_kanban.py  test_panel_leads_map.py
backend/tests/assistants/: test_registry.py
backend/tests/channels/: test_voice_stream.py  test_webchat_api.py  test_webchat_lead_capture.py  test_webchat_service_logic.py  test_whatsapp_webhook.py
backend/tests/panel/: __init__.py  test_embudo.py
docs/: Create a model response.md  (+8 more)
(+114 files in other folders)
